--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Voto Certo</ion-title>
+    <ion-title>VOTO CERTO</ion-title>
   </ion-navbar>
 </ion-header>
 
