add pagina sobre

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,9 @@
 </ion-header>
 
 <ion-content padding>  
-  <img src="assets/imgs/voto_certo.png"> 
+  <div text-center>
+    <img src="assets/imgs/voto_certo.png"> 
+  </div>
   <div text-center><h3>Descubra o melhor canditado de acordo com suas preferências</h3></div>
   <button ion-button full>Iniciar</button>
 </ion-content>
